# CODEX-HACKATHON-HYD

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  Screencast from 2026-07-18 17-29-48.webm  docker-compose.yml
backend/: __init__.py  main.py  pyproject.toml
backend/app/: connectors.py  llm.py  main.py  models.py  policy.py  ports.py  repository.py
backend/tests/: test_api.py  test_github_connector.py  test_policy.py  test_sqlite_repository.py
docs/: ARCHITECTURAL_FLOW.md  IMPLEMENTATION_ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  README.md  TECHNICAL_SPECIFICATION.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: Icon.tsx
frontend/src/lib/: api.ts  demo.test.ts  demo.ts
scripts/: healthcheck.sh  serve-backend.sh  serve-frontend.sh
